# VIDE

./: .gitignore  CMakeLists.txt  GetQhull.cmake  Makefile  README  README.md  jozov.c  jozov_persistent.c  readfiles.c  run_env.sh.in  run_python.sh.in  setup.py  voz.h  voz1b1.c  vozinit.c  voztie.c  vozutil.c  zobov_readme.txt
.eggs/PyYAML-6.0.2-py3.10-linux-x86_64.egg/EGG-INFO/: RECORD
.eggs/astropy-6.1.7-py3.10-linux-x86_64.egg/EGG-INFO/: RECORD  requires.txt
.eggs/astropy_iers_data-0.2025.3.17.0.34.53-py3.10.egg/EGG-INFO/: PKG-INFO  RECORD  requires.txt
.eggs/astropy_iers_data-0.2025.3.17.0.34.53-py3.10.egg/astropy_iers_data/: _version.py
.eggs/cftime-1.6.4.post1-py3.10-linux-x86_64.egg/EGG-INFO/: RECORD
.eggs/extension_helpers-1.2.0-py3.10.egg/EGG-INFO/: PKG-INFO  RECORD  entry_points.txt  requires.txt  top_level.txt
.eggs/healpy-1.18.0-py3.10-linux-x86_64.egg/EGG-INFO/: PKG-INFO  RECORD  requires.txt
.eggs/healpy-1.18.0-py3.10-linux-x86_64.egg/healpy/: version.py
.eggs/healpy-1.18.0-py3.10-linux-x86_64.egg/healpy.libs/: libsharp-78966f91.so.2.0.2
.eggs/netCDF4-1.7.2-py3.10-linux-x86_64.egg/EGG-INFO/: RECORD  requires.txt
.eggs/netCDF4-1.7.2-py3.10-linux-x86_64.egg/netCDF4.libs/: libcurl-5a2014d4.so.4.8.0  libhdf5_hl-123198ff.so.310.0.2  libnetcdf-1423d252.so.22  libssl-f6dcfdae.so.3
.eggs/numpy-2.2.4-py3.10-linux-x86_64.egg/EGG-INFO/: RECORD
.eggs/pyerfa-2.0.1.5-py3.10-linux-x86_64.egg/EGG-INFO/: RECORD  requires.txt
.eggs/scipy-1.15.2-py3.10-linux-x86_64.egg/EGG-INFO/: RECORD  requires.txt
analysis/: datasetsToAnalyze.py  xcor.py
build_tools/: apply_license.py  gather_sources.py  header.txt
c_tools/: CMakeLists.txt
c_tools/analysis/: CMakeLists.txt  voidOverlap.cpp  voidOverlap.ggo
c_tools/hod/: CMakeLists.txt  cobenorm.c  complex.h  dark_matter_statistics.c  halo_bias.c  halo_concentration.c  halo_mass_function.c  header.c  header.h  hod_functions.c  input_params.c  m2n_mcmc.c  main.c  mcmc.c  meshlink2.c  nrutil.h  one_halo_rspace.c  populate_simulation.c  tasks.c  test.c  tf_eisenstein_hu.c  two_halo_rspace.c  wp_minimization.c  xi_matter.c
c_tools/libzobov/: CMakeLists.txt  contour_pixels.cpp  contour_pixels.hpp  gslIntegrate.hpp  loadZobov.cpp  loadZobov.hpp  particleInfo.cpp  particleInfo.hpp  voidTree.hpp
c_tools/mock/: CMakeLists.txt  flash_loader.cpp  gadget_loader.cpp  generateFromCatalog.cpp  generateFromCatalog.ggo  generateMock.cpp  generateMock.ggo  generateTestMock.cpp  multidark_loader.cpp  ramses_loader.cpp  simulation_loader.cpp  simulation_loader.hpp
c_tools/mock/loaders/: CMakeLists.txt  basic_loader.cpp  flash_loader.cpp  gadget_loader.cpp  multidark_loader.cpp  ramses_loader.cpp  sdf_loader.cpp  sdfloader_internal.hpp  simulation_loader.cpp  simulation_loader.hpp
c_tools/stacking/: CMakeLists.txt  pruneVoids.cpp  pruneVoids.ggo  pruneVoids2D.cpp
c_tools/zobov2/: CMakeLists.txt  jozov2.cpp  jozov2_io.cpp  jozov2_watershed.cpp  jozov2_zones.cpp  zobov.hpp
c_tools/zobov2/jozov2/: CMakeLists.txt  findrtop.c  jozov2.cpp  jozov2.hpp  jozov2_io.cpp  jozov2_watershed.cpp  jozov2_zones.cpp  zobov.hpp
c_tools/zobov2/voz1b1/: CMakeLists.txt  voz.h  voz1b1.cpp  voz_io.cpp  voz_io.hpp  vozutil.c
catalog/: Loader.py  Vide_mock.py
container/: Dockerfile  build.sh
crossCompare/analysis/: compareProfiles.py  datasetsToAnalyze.py  makeCocenterProfiles.py  mergerTree.py  overlapVoids.py
crossCompare/parm/: sampleParm.py
crossCompare/plotting/: datasetsToPlot.py  plotCocenterProfiles.py  plotCompareDensCon.py  plotCompareDist.py  plotDenMaps.py  plotDensConVsR.py  plotMatchEllipRatio.py  plotMatchSizeRatio.py  plotNumberFunc.py
dummy_extension/: empty.c
mytools/: FindHealpix.cmake  Makefile  buildObservedVoids_conf.c  buildObservedVoids_conf.h  config.mk  contour_pixels.cpp  contour_pixels.hpp  generateFromCatalog.cpp  generateFromCatalog.ggo  generateMock.cpp  generateMock.ggo  generateTestMock.cpp  gslIntegrate.hpp  hack_mesh.cpp  loadZobov.cpp  loadZobov.hpp  particleInfo.cpp  particleInfo.hpp  voidTree.hpp  zobovConf.c  zobovConf.h
notebook/: visualize.ipynb
pipeline/: applyMaskToMock.py  generateCatalog.py  prepareCatalogs.in.py  prepareCatalogs.py  prepareGadgetCatalog.py
pipeline/datasets/: example_observation.py  example_simulation.py  mock_dr9mid.py  multidark.py
pipeline_tools/: generateFromCatalog.ggo  generateMock.cpp  gslIntegrate.hpp  loadZobov.cpp
pipeline_tools/libzobov/: loadZobov.hpp
pipeline_tools/mock/: generateFromCatalog.cpp
plotting/: datasetsToPlot.py  plotCompareDensCon.py  plotCompareDist.py  plotDensConVsR.py
python_tools/: PKG-INFO  setup.py  visualize.py
python_tools/fit_hod/: HOD_library.py  HOD_parameters.py  correlation_function_library.py  readsnap.py  readsubf.py
python_tools/misc_util/: figureOutMask.py
python_tools/pipeline_source/: defaults.py  prepareCatalogs.in.py  prepareInputs.in.py
python_tools/vide.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python_tools/vide/backend/: __init__.py  cleaning.py  launchers.py
python_tools/vide/voidUtil/: catalogUtil.py  matchUtil.py  plotUtil.py  profileUtil.py  xcorUtil.py
python_tools/void_pipeline/: __main__.py
python_tools/void_pipeline/datasets/: example_observation.py  example_simulation.py
python_tools/void_python_tools/: __init__.py
python_tools/void_python_tools/apTools/: __init__.py
python_tools/void_python_tools/apTools/chi2/: __init__.py  cosmologyTools.py  velocityProfileFitNative.c
python_tools/void_python_tools/backend/: __init__.py  backend.py  classes.py  launchers.py
python_tools/void_python_tools/partUtil/: __init__.py  partUtil.py
python_tools/void_python_tools/plotting/: __init__.py  plotDefs.py  plotTools.py
python_tools/void_python_tools/voidUtil/: __init__.py  catalogUtil.py  matchUtil.py  plotUtil.py  profileUtil.py  xcorUtil.py  xcorlib.py
python_tools/void_python_tools/xcor/: __init__.py  xcorlib.py
zobov/: 2Dvoz1b1.c  2Dvozinit.c  2Dvoztie.c  CMakeLists.txt  jozov.c  readfiles.c  voz.h  voz1b1.c  vozinit.c  voztie.c  vozutil.c
(+2 files in other folders)
